--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^4.13.1",
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "flow-bin": "^0.61.0",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
